# watchapy

./: .gitignore  README.md  pyproject.toml  start_fastapi_testapp.sh
tests/: test_watchapy.py
tests/fastapi/: monitoredapi.py
watchapy/: watchapy.py
